02-kubernetes/manifests/atividade-08/ingress-color-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-color-tls
  namespace: color
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts: [blue.color.contorq.com, red.color.contorq.com]
    secretName: color-tls
  rules:
  - host: blue.color.contorq.com
    http:
      paths:
      - { path: /, pathType: Prefix, backend: { service: { name: blue, port: { number: 80 } } } }
  - host: red.color.contorq.com
    http:
      paths:
      - { path: /, pathType: Prefix, backend: { service: { name: red, port: { number: 80 } } } }
